Return to have all scopes instead of only compile